# KEngine

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  KEngine.sln  clang-tidy.yaml  conanfile.py  makefile  vcpkg.json  workspace.json
KEngine/: App.cpp  App.h  ClassDiagram.cd  ComponentArray.h  ComponentManager.h  Components.h  Coordinator.h  Engine.cpp  Engine.h  Entity.cpp  Entity.h  Entity2D.cpp  Entity2D.h  EntityManager.cpp  EntityManager.h  EntityManager.hpp  IComponent.cpp  IComponent.h  KEngine.rc  KEngine.vcxproj  KEngine.vcxproj.filters  Math.cpp  Math.h  Model.cpp  Model.h  RenderComponent.h  RenderSystem.cpp  RenderSystem.h  Shapes.h  SpriteComponent.cpp  SpriteComponent.h  System.h  SystemManager.h  Transform.cpp  Transform.h  TransformComponent.h  Vertex.h  VulkanEngine.cpp  VulkanEngine.h  compile.bat  (+8 more)
KEngine/Resources/Shaders/Default/: BaseFrag.frag  BaseVertex.vert
Vulkan_API/: ClassDiagram.cd  DeletionQueue.h  Engine.cpp  Engine.h  Model.h  Vertex.h  VulkanEngine.cpp  VulkanEngine.h  Vulkan_API.vcxproj  Vulkan_API.vcxproj.filters  main.cpp  vk_images.cpp  vk_images.h  vk_initializers.cpp  vk_initializers.h  vk_types.h
docs/: ECS App Architecture.md  ECS class diagram.md
main/: CMakeLists.txt  main.cpp
myECS/: CMakeLists.txt  myECS.hpp
myECS/include/myECS/: App.hpp  Archetype.hpp  Component.hpp  ComponentManager.hpp  ComponentStorage.hpp  ComponentsManager.hpp  Entity.hpp  EntityManager.hpp  System.hpp  SystemManager.hpp  World.hpp  definitions.hpp
myECS/src/: App.cpp  Component.cpp  ComponentManager.cpp  ComponentsManager.cpp  SystemManager.cpp  World.cpp
resources/shaders/: base_frag.frag  base_vertex.vert
vkEngine/: CMakeLists.txt  CMakePresets.json  gltfLoader.cpp  gltfLoader.hpp  infoCreator.cpp  infoCreator.hpp  init.cpp  init.hpp  main.cpp  meshData.hpp  objLoader.cpp  objLoader.hpp  pipeline_builder.cpp  pipeline_builder.hpp  util_structs.hpp  utils.cpp  utils.hpp  vkEngine.cpp  vkEngine.cpp~  vkEngine.h  vkEngine.hpp
vkEngine/include/vkEngine/: DescriptorAllocator.hpp  DescriptorLayoutBuilder.hpp  DescriptorWriter.hpp  cleanupStruct.hpp  engine.hpp  init.hpp  meshData.hpp  util_structs.hpp  vkEngine.hpp
vkEngine/src/: DescriptorAllocatorGrowable.cpp  DescriptorLayoutBuilder.cpp  DescriptorWriter.cpp  engine.cpp  gltfLoader.cpp  infoCreator.cpp  init.cpp  objLoader.cpp  pipeline_builder.cpp  utils.cpp  vkEngine.cpp
